--- a/package/crds/minio.crossplane.io_policies.yaml
+++ b/package/crds/minio.crossplane.io_policies.yaml
@@ -74,6 +74,11 @@ spec:
                       AllowBucket will create a simple policy that allows all operations for the given bucket.
                       Mutually exclusive to `RawPolicy`.
                     type: string
+                  name:
+                    description: |-
+                      The name of the policy
+                      Defaults to `metadata.name` if unset.
+                    type: string
                   rawPolicy:
                     description: |-
                       RawPolicy describes a raw S3 policy ad verbatim.
